# exampion

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: .env  compose.yml  devcontainer.json
.github/workflows/: daily_review.yml
src/exampion/: client.py  config.py  main.py  reviewer.py
