[project]
name = "exampion"
version = "0.1.0"
description = "Conquer your examination of conscience"
authors = [{ name = "Peter Tessier", email = "thepetertessier@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = ["discord.py>=2.7.1,<3"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
fix = true
line-length = 100

[tool.ruff.lint]
select = ["I", "E", "F", "W", "UP", "ARG", "G", "TC"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.pytest]
addopts = ["--import-mode=importlib", "--color=yes"]
